# DeepFaceRegistry

./: .gitignore  README.md
camera_track_backend/: .gitignore  Dockerfile  README.md  camera-track.yml  fabfile.py  face_training.py  manage.py  pyproject.toml
camera_track_backend/apps/base/: api.py  models.py  serializers.py
camera_track_backend/apps/cameras/: admin.py  apps.py  models.py  utils.py
camera_track_backend/apps/cameras/api/: routers.py  serializers.py  urls.py
camera_track_backend/apps/cameras/migrations/: 0001_initial.py  0002_camera_port_historicalcamera_port.py  0003_camera_cam_password_camera_cam_username_camera_file_and_more.py  0004_alter_camera_file_alter_historicalcamera_file.py  0005_cameraactionlog_delete_historicalcamera.py  0006_remove_cameraactionlog_target_camera_and_more.py  0007_cameraactionlog_cam_ip.py  0008_cameraactionlog_cam_name.py
camera_track_backend/apps/clips/: admin.py  apps.py  models.py
camera_track_backend/apps/clips/api/: routers.py  serializers.py  urls.py
camera_track_backend/apps/clips/migrations/: 0001_initial.py  0002_remove_historicalclip_camera_and_more.py  0003_initial.py  0004_remove_clip_path.py  0005_delete_clipactionlog.py  0006_alter_clip_file.py
camera_track_backend/apps/permissions/api/: routers.py  serializers.py
camera_track_backend/apps/users/: admin.py  authentication.py  authentication_mixins.py  models.py  utils.py  views.py
camera_track_backend/camera_track/: asgi.py  urls.py  wsgi.py
camera_track_backend/camera_track/settings/: base.py  local.py  production.py
(+51 files in other folders)
